# libsolucache-client

./: CMakeLists.txt  README.md
include/solucache/: client.h
src/: CMakeLists.txt  client.cpp  client.h
tests/: basic-client.cpp
